Override css page + rename assets build files

--- a/manifest.json
+++ b/manifest.json
@@ -15,10 +15,10 @@
         "https://*/*"
       ],
       "js": [
-        "dist/main.js"
+        "dist/ytswap.js"
       ],
       "css": [
-        "dist/main.css"
+        "dist/ytswap.css"
       ],
       "run_at": "document_end"
     }
