--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "preact": "^10.5.12"
   },
   "scripts": {
-    "build": "esbuild src/main.jsx --bundle --jsx-factory=h --jsx-fragment=preact.Fragment --loader:.png=dataurl --outfile=dist/main.js"
+    "build": "esbuild src/main.jsx --bundle --jsx-factory=h --jsx-fragment=preact.Fragment --loader:.png=dataurl --outfile=dist/ytswap.js"
   }
 }
