Add chrome cookie + use chrome storage for play icon + remove commented code

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,12 @@
   "permissions": [
     "<all_urls>",
     "tabs",
-    "tabCapture"
+    "tabCapture",
+    "storage",
+    "cookies",
+    "http://*/*",
+    "https://*/*"
+
   ],
   "content_scripts": [
     {
